--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-hook-form": "^7.25.3",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
