--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "material-ui-colors": "^1.0.0",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
