--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "material-ui-colors": "^1.0.0",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
@@ -25,6 +26,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
